# kmailtransport

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  DESIGN  KF5MailTransportConfig.cmake.in  REUSE.toml  TODO  kmailtransport.categories  kmailtransport.renamecategories  metainfo.yaml
src/: CMakeLists.txt  KPimMailTransportConfig.cmake.in  Messages.sh  addtransportdialog.cpp  addtransportdialog.h  dispatcherinterface.cpp  dispatchmodeattribute.cpp  errorattribute.cpp  filteractionjob.cpp  filteractionjob_p.h  helper_p.h  kmailtransport-index.qdoc  kmailtransport.qdoc  kmailtransport.qdocconf  kmailtransport_private_export.h  mailtransport.kcfg  mailtransport_debug.cpp  mailtransport_debug.h  mailtransport_defs.h  messagequeuejob.cpp  messagequeuejob.h  outboxactions.cpp  outboxactions_p.h  outlookoauthtokenrequester.cpp  outlookoauthtokenrequester.h  precommandjob.cpp  precommandjob.h  resourcesendjob_p.h  sendmailconfigwidget.cpp  sendmailjob.cpp  sendmailjob.h  sentactionattribute.cpp  sentbehaviourattribute.cpp  sentbehaviourattribute.h  servertest.cpp  servertest.h  smtpconfigwidget.cpp  smtpconfigwidget.h  smtpjob.cpp  smtpjob.h  (+27 more)
src/akonadi/: dispatcherinterface.cpp  dispatchmodeattribute.cpp  outboxactions.cpp  sentactionattribute.cpp  sentactionattribute.h  sentbehaviourattribute.h
src/autotests/: CMakeLists.txt  transportlistviewtest.cpp  transportlistviewtest.h  transporttreeviewtest.cpp  transporttreeviewtest.h
src/kcm/: CMakeLists.txt  configmodule.cpp  configmodule.h  kcm_mailtransport.desktop
src/kconf_update/: CMakeLists.txt
src/kmailtransport/: CMakeLists.txt  KF5MailTransportConfig.cmake.in  KPimMailTransportConfig.cmake.in  kmailtransport_private_export.h  mailtransport.kcfg  mailtransport_defs.h  precommandjob.cpp  precommandjob.h  servertest.cpp  servertest.h  smtpjob.h  socket.cpp  socket.h  transport.cpp  transport.h  transport_p.h  transportbase.kcfgc  transportjob.cpp  transportjob.h  transportmanager.cpp  transportmanager.h  transporttype.cpp  transporttype.h  transporttype_p.h
src/kmailtransport/plugins/: transportabstractplugin.cpp  transportabstractplugin.h  transportpluginmanager.cpp  transportpluginmanager.h
src/kmailtransport/smtp/: smtpconfigwidget.cpp  smtpconfigwidget.h  smtpjob.cpp  smtpjob.h
src/kmailtransport/tests/: CMakeLists.txt  addtransportdialogng_gui.cpp  addtransportdialogng_gui.h  servertest.cpp  transportmgr.cpp  transportmgr.h
src/kmailtransport/ui/: addtransportdialog.ui  transportmanagementwidget.ui
src/kmailtransport/widgets/: addtransportdialog.cpp  addtransportdialog.h  addtransportdialogng.cpp  addtransportdialogng.h  smtpconfigwidget.cpp  smtpconfigwidget.h  transportcombobox.cpp  transportcombobox.h  transportconfigdialog.cpp  transportconfigdialog.h  transportconfigwidget.cpp  transportconfigwidget.h  transportconfigwidget_p.h  transportlistview.cpp  transportlistview.h  transportmanagementwidget.cpp  transportmanagementwidget.h
src/kmailtransportakonadi/: CMakeLists.txt  KF5MailTransportAkonadiConfig.cmake.in  KPimMailTransportAkonadiConfig.cmake.in  attributeregistrar.cpp  dispatcherinterface.cpp  dispatcherinterface.h  dispatcherinterface_p.h  dispatchmodeattribute.cpp  dispatchmodeattribute.h  errorattribute.cpp  errorattribute.h  filteractionjob.cpp  filteractionjob_p.h  messagequeuejob.cpp  messagequeuejob.h  outboxactions.cpp  outboxactions_p.h  sentactionattribute.cpp  sentactionattribute.h  sentbehaviourattribute.cpp  sentbehaviourattribute.h  transportattribute.cpp  transportattribute.h
src/kmailtransportakonadi/autotests/: CMakeLists.txt  attributetest.cpp  attributetest.h  filteractiontest.cpp  filteractiontest.h  messagequeuejobtest.cpp  messagequeuejobtest.h  testattribute.h
src/kmailtransportakonadi/plugins/: CMakeLists.txt  akonadimailtransport.json  akonadimailtransportplugin.cpp  akonadimailtransportplugin.h  resourcesendjob.cpp  resourcesendjob_p.h
src/kmailtransportakonadi/tests/: CMakeLists.txt  abort.cpp  abort.h  clearerror.cpp  clearerror.h  queuer.cpp  queuer.h  sendqueued.cpp  sendqueued.h
src/plugins/: transportabstractplugin.cpp  transportabstractplugin.h  transportpluginmanager.cpp  transportpluginmanager.h
src/plugins/smtp/: CMakeLists.txt  gmailpasswordrequester.cpp  gmailpasswordrequester.h  outlookpasswordrequester.cpp  outlookpasswordrequester.h  sessionuiproxy.h  smtpconfigdialog.cpp  smtpconfigdialog.h  smtpconfigwidget.cpp  smtpconfigwidget.h  smtpjob.cpp  smtpjob.h  smtpmailtransport.json  smtpmailtransportplugin.cpp  smtpmailtransportplugin.h  smtpsettings.ui  xoauthpasswordrequester.cpp  xoauthpasswordrequester.h
src/plugins/tests/: CMakeLists.txt  transportmanagertest.cpp  (+1 more)
src/tests/: CMakeLists.txt  addtransportdialogng_gui.cpp  addtransportdialogng_gui.h  servertest.cpp  transportcombobox_gui.cpp  transportlistview_gui.cpp  transportmanagementwidget_gui.cpp  transportmanagementwidgetng_gui.cpp  transportmgr.cpp  transportmgr.h  transporttreeview_gui.cpp
src/ui/: addtransportdialog.ui  smtpsettings.ui  transportmanagementwidget.ui  transportmanagementwidgetng.ui
src/widgets/: addtransportdialogng.cpp  addtransportdialogng.h  smtpconfigwidget.cpp  transportactivitiesabstractplugin.cpp  transportactivitiesabstractplugin.h  transportcombobox.cpp  transportcombobox.h  transportconfigdialog.cpp  transportconfigdialog.h  transportconfigwidget.cpp  transportconfigwidget.h  transportlistdelegate.cpp  transportlistdelegate.h  transportlistview.cpp  transportlistview.h  transportlistwidget.cpp  transportlistwidget.h  transportmanagementwidget.cpp  transportmanagementwidget.h  transportmanagementwidgetng.cpp  transportmanagementwidgetng.h  transportmodel.cpp  transportmodel.h  transportsortproxymodel.cpp  transportsortproxymodel.h  transporttreedelegate.cpp  transporttreedelegate.h  transporttreeview.cpp  transporttreeview.h
tests/: CMakeLists.txt  abort.cpp  clearerror.cpp  queuer.cpp  queuer.h  sendqueued.cpp  servertest.cpp  transportmgr.cpp
(+175 files in other folders)
